--- a/cv/CMakeLists.txt
+++ b/cv/CMakeLists.txt
@@ -3,13 +3,10 @@ project(cv)
 
 set(CMAKE_CXX_STANDARD 14)
 
-
 include_directories(include/)
+# Interface only at this point since there are no CPP files
 add_library(${PROJECT_NAME} INTERFACE)
 
-# set_target_properties(${PROJECT_NAME} PROPERTIES 
-#   LINKER_LANGUAGE CXX
-#   CXX_STANDARD 14)
 target_include_directories(${PROJECT_NAME} INTERFACE include/)
 
 enable_testing()
