--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(sense)
 
+add_subdirectory(core)
 add_subdirectory(vis)
 add_subdirectory(cv)
 add_subdirectory(examples)
