--- a/cv/CMakeLists.txt
+++ b/cv/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(include/)
 add_library(${PROJECT_NAME} INTERFACE)
 
 target_include_directories(${PROJECT_NAME} INTERFACE include/)
+target_link_libraries(${PROJECT_NAME} INTERFACE core)
 
 enable_testing()
 add_subdirectory(tests)
