--- a/cv/CMakeLists.txt
+++ b/cv/CMakeLists.txt
@@ -5,10 +5,11 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(include/)
 # Interface only at this point since there are no CPP files
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME}
+  src/io.cpp)
 
-target_include_directories(${PROJECT_NAME} INTERFACE include/)
-target_link_libraries(${PROJECT_NAME} INTERFACE core)
+target_include_directories(${PROJECT_NAME} PUBLIC include/)
+target_link_libraries(${PROJECT_NAME} core)
 
 enable_testing()
 add_subdirectory(tests)
