Testing how vector allignment works on different sizes and vectors of vectors

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,3 +2,5 @@ project(examples)
 
 add_executable(imgui_demo imgui_demo.cpp)
 target_link_libraries(imgui_demo vis)
+
+add_executable(vector_allign_tests vector_allign_tests.cpp)
