--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(sense)
 
+set(CMAKE_CXX_STANDARD 14)
+
 add_subdirectory(core)
 add_subdirectory(vis)
 add_subdirectory(cv)
