Fixing image display and removing ini from repo

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,6 @@ add_executable(imgui_demo imgui_demo.cpp)
 target_link_libraries(imgui_demo vis)
 
 add_executable(vector_allign_tests vector_allign_tests.cpp)
+
+add_executable(display_image display_image.cpp)
+target_link_libraries(display_image vis cv)
