--- a/cv/CMakeLists.txt
+++ b/cv/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 project(cv)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include/)
 # Interface only at this point since there are no CPP files
 add_library(${PROJECT_NAME}
-  src/io.cpp)
+  src/io.cpp
+  src/image_file_store.cpp)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES 
-  CXX_STANDARD 14)  
+  CXX_STANDARD 17)  
 target_include_directories(${PROJECT_NAME} PUBLIC include/)
 target_link_libraries(${PROJECT_NAME} core)
 
