--- a/vis/CMakeLists.txt
+++ b/vis/CMakeLists.txt
@@ -13,4 +13,5 @@ target_link_libraries(${PROJECT_NAME} imgui cv glm)
 target_include_directories(
   ${PROJECT_NAME}
   PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/include)
+  include/
+  submodules/glm)
